fix(parser): keep the label dictionary in declaration order (v15)
labels() now returns an unmodifiable view of its ordered map instead of
Map.copyOf, so equal-length labels that both fit a heading always resolve
to the same field, independent of the JVM. Possible behaviour change for
such ties, so the class version contract moves to pdfbox-3.0.5-rules-v15.

Refs Halildeu/ats#271.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>